@@ -1638,6 +1638,9 @@
 				RelativePath="..\..\include\wx\version.h">
 			</File>
 			<File
+				RelativePath="..\..\include\wx\versioninfo.h">
+			</File>
+			<File
 				RelativePath="..\..\include\wx\volume.h">
 			</File>
 			<File
